Fix issue Responsive cropping needed - need to limit hero-image.jpg height and crop to fit width as screen gets wider #32

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -300,6 +300,7 @@ footer {
 /*HERO FEATURE*/
 
 #hero-feature {
+  margin-top: 2.5em;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -308,10 +309,19 @@ footer {
   z-index: -1;
 }
 
+.hero-image-container {
+  width: 100%;
+  max-height: 700px;
+  object-fit: cover;
+  display: block;
+  border-radius: 1em;
+  overflow: hidden;
+}
+
+
 .hero-image-container img {
   width: 100%;
   height: auto;
-  max-height: 700px;
   object-fit: cover;
   display: block;
   border-radius: 1em;
@@ -319,8 +329,7 @@ footer {
 
 @media (min-width: 768px) {
   .hero-image-container img {
-    height: 700px;
-    object-position: top;
+    object-position: center;
   }
 }
 
